changed parseInt to parseFloat so that decimal would not drop

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			        if (values) {
 			        	// Here I do parseInt when I push because I am currently pushing text values
 			        	// I want to push integer values, so I convert to int
-			        	inputVals.push(parseInt(values));
+			        	inputVals.push(parseFloat(values));
 			        }
 			    }); 
 
