lined up stuff in table

--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 		<div class="intro" id="test"> 
 			<h1>Grade Calculator</h1>
 			<p> Enter your grades along with their weights in the boxes below in order to calculate your current grade </p>
+			<p> When you enter your grade and weight, make
 		</div>
 		<div class="submit">
 			<form id="myform" action="results.html">
 				<table class="table">
 					<tr>
 						<td> 
-							<b> Assignment </b>
+							<p id="title">Assignment</p>
 						</td>
 						<td> 
-							<b> Grade </b>
+							<b id="title">Grade</b>
 						</td>
 						<td>
-							<b> Weight </b>
+							<b id="title">Weight</b>
 						</td>
 					</tr>
 					<tr>
 						<td>
-							1
+							<p id="assignment_number"> 1 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade1" value size="2">
@@ -38,7 +39,7 @@
 					</tr>
 					<tr>
 						<td>
-							2
+							<p id="assignment_number"> 2 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade2" value size="2">
@@ -49,7 +50,7 @@
 					</tr>
 					<tr>
 						<td>
-							3
+							<p id="assignment_number"> 3 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade3" value size="2">
@@ -59,7 +60,7 @@
 					</tr>
 					<tr>
 						<td>
-							4
+							<p id="assignment_number"> 4 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade4" value size="2">
@@ -69,7 +70,7 @@
 					</tr>
 					<tr>
 						<td>
-							5
+							<p id="assignment_number"> 5 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade5" value size="2">
@@ -79,7 +80,7 @@
 					</tr>
 					<tr>
 						<td>
-							6
+							<p id="assignment_number"> 6 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade6" value size="2">
@@ -89,7 +90,7 @@
 					</tr>
 					<tr>
 						<td>
-							7
+							<p id="assignment_number"> 7 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade7" value size="2">
@@ -99,7 +100,7 @@
 					</tr>
 					<tr>
 						<td>
-							8
+							<p id="assignment_number"> 8 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade8" value size="2">
@@ -109,7 +110,7 @@
 					</tr>
 					<tr>
 						<td>
-							9
+							<p id="assignment_number"> 9 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade9" value size="2">
@@ -119,7 +120,7 @@
 					</tr>
 					<tr>
 						<td>
-							10
+							<p id="assignment_number"> 10 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade10" value size="2">
@@ -129,7 +130,7 @@
 					</tr>
 					<tr>
 						<td>
-							11
+							<p id="assignment_number"> 11 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade11" value size="2">
@@ -139,7 +140,7 @@
 					</tr>
 					<tr>
 						<td>
-							12
+							<p id="assignment_number"> 12 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade12" value size="2">
@@ -149,7 +150,7 @@
 					</tr>
 					<tr>
 						<td>
-							13
+							<p id="assignment_number"> 13 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade13" value size="2">
@@ -159,7 +160,7 @@
 					</tr>
 					<tr>
 						<td>
-							14
+							<p id="assignment_number"> 14 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade14" value size="2">
@@ -169,7 +170,7 @@
 					</tr>
 					<tr>
 						<td>
-							15
+							<p id="assignment_number"> 15 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade15" value size="2">
@@ -179,7 +180,7 @@
 					</tr>
 					<tr>
 						<td>
-							16
+							<p id="assignment_number"> 16 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade16" value size="2">
