--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 		<div class="intro" id="test"> 
 			<h1>Grade Calculator</h1>
 			<p> Enter your grades along with their weights in the boxes below in order to calculate your current grade </p>
+			<p> When you enter your grade and weight, make
 		</div>
 		<div class="submit">
 			<form id="myform" action="results.html">
 				<table class="table">
 					<tr>
 						<td> 
-							<b> Assignment </b>
+							<p id="title">Assignment</p>
 						</td>
 						<td> 
-							<b> Grade </b>
+							<b id="title">Grade</b>
 						</td>
 						<td>
-							<b> Weight </b>
+							<b id="title">Weight</b>
 						</td>
 					</tr>
 					<tr>
 						<td>
-							1
+							<p id="assignment_number"> 1 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade1" value size="2">
@@ -38,7 +39,7 @@
 					</tr>
 					<tr>
 						<td>
-							2
+							<p id="assignment_number"> 2 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade2" value size="2">
@@ -49,7 +50,7 @@
 					</tr>
 					<tr>
 						<td>
-							3
+							<p id="assignment_number"> 3 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade3" value size="2">
@@ -59,7 +60,7 @@
 					</tr>
 					<tr>
 						<td>
-							4
+							<p id="assignment_number"> 4 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade4" value size="2">
@@ -69,7 +70,7 @@
 					</tr>
 					<tr>
 						<td>
-							5
+							<p id="assignment_number"> 5 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade5" value size="2">
@@ -79,7 +80,7 @@
 					</tr>
 					<tr>
 						<td>
-							6
+							<p id="assignment_number"> 6 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade6" value size="2">
@@ -89,7 +90,7 @@
 					</tr>
 					<tr>
 						<td>
-							7
+							<p id="assignment_number"> 7 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade7" value size="2">
@@ -99,7 +100,7 @@
 					</tr>
 					<tr>
 						<td>
-							8
+							<p id="assignment_number"> 8 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade8" value size="2">
@@ -109,7 +110,7 @@
 					</tr>
 					<tr>
 						<td>
-							9
+							<p id="assignment_number"> 9 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade9" value size="2">
@@ -119,7 +120,7 @@
 					</tr>
 					<tr>
 						<td>
-							10
+							<p id="assignment_number"> 10 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade10" value size="2">
@@ -129,7 +130,7 @@
 					</tr>
 					<tr>
 						<td>
-							11
+							<p id="assignment_number"> 11 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade11" value size="2">
@@ -139,7 +140,7 @@
 					</tr>
 					<tr>
 						<td>
-							12
+							<p id="assignment_number"> 12 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade12" value size="2">
@@ -149,7 +150,7 @@
 					</tr>
 					<tr>
 						<td>
-							13
+							<p id="assignment_number"> 13 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade13" value size="2">
@@ -159,7 +160,7 @@
 					</tr>
 					<tr>
 						<td>
-							14
+							<p id="assignment_number"> 14 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade14" value size="2">
@@ -169,7 +170,7 @@
 					</tr>
 					<tr>
 						<td>
-							15
+							<p id="assignment_number"> 15 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade15" value size="2">
@@ -179,7 +180,7 @@
 					</tr>
 					<tr>
 						<td>
-							16
+							<p id="assignment_number"> 16 </p>
 						</td>
 						<td> 
 							<input type="text" id="grade16" value size="2">
@@ -192,7 +193,6 @@
 			</form>
 
 			<script type="text/javascript">
-
 			/**
 			$('#submit').click(function() {
 				var items = [];
@@ -203,37 +203,31 @@
 				items.push(obj);
 				console.log(items[0]);
 			}) */
-
 			
 			// Get each of the values out of the input boxes
 			$('#submit').click(function () {
    				var inputVals = [];
     			$('#myform :input[type="text"]').each(function () {
         			var values = $(this).val();
-
         			// If value exists
 			        if (values) {
 			        	// Here I do parseInt when I push because I am currently pushing text values
 			        	// I want to push integer values, so I convert to int
-			        	inputVals.push(parseInt(values));
+			        	inputVals.push(parseFloat(values));
 			        }
 			    }); 
-
     			console.log(inputVals);
-
     			// Now to separate the grades and weights.
     			// They should be next to each other if the user inputted them correctly.
     			// So I am going to create two arrays
     			var grades = [];
     			var weights = [];
-
     			// Keep track of inputVals index
     			var i = 0;
     			// Keep track of grades index
     			var g = 0;
     			// Keep track of weights index
     			var w = 0;
-
     			// Put values in respective arrays
     			while (i < inputVals.length) {
     				if (i%2 == 0) {
@@ -247,29 +241,22 @@
     					i++;
     				}
     			}
-
     			//console.log(grades);
     			//console.log(weights);
-
     			// Used to sum the grade
     			var sum = 0;
     			// Used to get the grade so far
     			var sumOfPercents = 0;
-
     			for (i = 0; i < grades.length; i++) {
     				sum += grades[i] * weights[i] * .01;
     				sumOfPercents += weights[i] * .01;
     			}
-
     			var currentGrade = (sum/sumOfPercents);
     			//console.log(currentGrade);
-
     			// Set x to save the current grade for the results page
     			localStorage.setItem("x", currentGrade);
-
+    			
 			});
-
-
 		</script>
 
 
