--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 						</td>
 					</tr>
 				</table>
+				<input type="text" id="maxGrade" value size="2">
 				<input type="submit" id="submit" value="Submit"/>
 			</form>
 
@@ -204,6 +205,7 @@
 				console.log(items[0]);
 			}) */
 			
+			var sumOfPercents = 0;
 			// Get each of the values out of the input boxes
 			$('#submit').click(function () {
    				var inputVals = [];
@@ -246,15 +248,17 @@
     			// Used to sum the grade
     			var sum = 0;
     			// Used to get the grade so far
-    			var sumOfPercents = 0;
+    
     			for (i = 0; i < grades.length; i++) {
     				sum += grades[i] * weights[i] * .01;
     				sumOfPercents += weights[i] * .01;
     			}
     			var currentGrade = (sum/sumOfPercents);
     			//console.log(currentGrade);
-    			// Set x to save the current grade for the results page
-    			localStorage.setItem("x", currentGrade);
+    			// Set currentGrade to save the current grade for the results page
+    			console.log(sumOfPercents);
+    			localStorage.setItem("currentGrade", currentGrade);
+    			localStorage.setItem("sumOfPercents", sumOfPercents);
     			
 			});
 		</script>
