--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="intro" id="test"> 
 			<h1>Grade Calculator</h1>
 			<p> Enter your grades along with their weights in the boxes below in order to calculate your current grade </p>
-			<p> When you enter your grade and weight, make
+			<p> When you enter your grade and weight, do not include the "%" symbol. For example, "94.40".
 		</div>
 		<div class="submit">
 			<form id="myform" action="results.html">
